# opencl-examples

./: .gitignore  CMakeLists.txt  main.cpp  stopwatch.h
addExample/: CMakeLists.txt  addexample.cpp
addExample/kernals/: vectorAdd.cl
histogram/: CMakeLists.txt  histogramexample.cpp
histogram/resources/: histogram.cl
kernals/: vectorAdd.cl
mergeSortExample/: CMakeLists.txt  mergesortexample.cpp
mergeSortExample/kernels/: mergeSort.cl
shared/: util.h
